# iCalendar

./: .gitignore  LICENSE  README.md  iCal.cabal  iCalendar.cabal
src/: Main.hs  test.ics
src/Text/: ICal.hs  ICalendar.hs
src/Text/ICal/: VCalendar.hs  VEvent.hs
src/Text/ICal/Parsec/: Combinators.hs
src/Text/ICalendar/: Parser.hs  Type.hs  VCalendar.hs  VEvent.hs
src/Text/ICalendar/Component/: VCalendar.hs  VEvent.hs
src/Text/ICalendar/DataType/: Duration.hs  Text.hs
src/Text/ICalendar/Parsec/: Combinators.hs
src/Text/ICalendar/Parser/: Combinator.hs  Combinators.hs  Error.hs  Validator.hs  Validators.hs
src/Text/ICalendar/Type/: All.hs  Duration.hs  Text.hs
test/: SpecHelper.hs
test/Spec/: Expectations.hs  Helpers.hs
test/Text/ICalendar/Component/: VCalendarSpec.hs  VEventSpec.hs
test/Text/ICalendar/DataType/: DurationSpec.hs  TextSpec.hs
test/Text/ICalendar/Parser/: CombinatorSpec.hs  ValidatorSpec.hs
