name:                iCalendar
version:             0.1.0.0
synopsis:            iCalendar RFC-5545 parser
homepage:            --
license:             BSD3
license-file:        LICENSE
author:              Jon Childress
maintainer:          jon@childr.es
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:     base >= 4.6 && < 4.7,
                     parsec,
                     parsec-permutation >= 0.1.2.0
  hs-source-dirs:    src
  default-language:  Haskell2010
