name:                iCalendar
version:             0.1.0.0
synopsis:            iCalendar RFC-5545 parser
homepage:            --
license:             BSD3
license-file:        LICENSE
author:              Jon Childress
maintainer:          jon@childr.es
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:  Haskell2010
  hs-source-dirs:    src
  build-depends:     base >= 4.6 && < 4.7,
                     parsec,
                     parsec-permutation >= 0.1.2.0,
                     time >= 1.4

test-suite           spec
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  main-is:           Spec.hs
  hs-source-dirs:    src, test
  build-depends:     base >=4.6 && <4.7,
                     parsec,
                     parsec-permutation >= 0.1.2.0,
                     time >= 1.4,
                     hspec >= 1.8
